--- a/flask_app/templates/account.html
+++ b/flask_app/templates/account.html
@@ -1,46 +1,57 @@
 {% extends "header.html" %}
 {% block content %}
-<div class="row">
-    <div class="col">
+<div class="container-fluid">
+    <div class="row">
         <h1>Hey, {{ current_user.first_name }} {{current_user.last_name}}!</h1>
     </div>
-    <div class="col">
-        <h3>Username: {{current_user.username}}</h3>
+    <hr>
+
+    <div class="row">
+        <h5>Username:&nbsp;</h5> {{current_user.username}}
     </div>
-    <div class="col">
-        <h3>Email: {{current_user.email}}</h3>
+    <div class="row">
+        <div class="col">
+            <form action="" method="post">
+                {{ username_form.csrf_token }}
+                <div class="form-group">
+                    <!--{{ username_form.username.label(class="form-control-label") }} -->
+                    {{ username_form.username(class="form-control form-control-lg") }}
+    
+                    {% if username_form.username.errors %}
+                    <div class="alert alert-warning" role="alert">
+                        {% for error in username_form.username.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ username_form.submit }}
+                </div>
+            </form>
+        </div>
     </div>
-    <div class="col">
-        <h3>Phone: {{current_user.phone}}</h3>
+
+    <div class="row">
+        <h5>Email:&nbsp;</h5>{{current_user.email}}
     </div>
-    <!--
+    <div class="row">
+        <h5>Phone:&nbsp;</h5>{{current_user.phone}}
+    </div>
+
+    <div class = "row">
+        <h5>Following Groups:&nbsp;</h5> 
+    </div>
+
+    <div class="row">
+        <ul>
         {% for group in current_user.following %}
-        <li>{{group.group_id}}: {{ group.description }}</li>
-    {% endfor %}
-    -->
+            <li><a href="{{ url_for('groups.group_detail', group_id=group.group_id) }}">{{group.group_id}}: </a>{{ group.description }}</li>
+        {% endfor %}
+        </ul>
+    </div>
     
 </div>
 
-<div class="row">
-    <div class="col">
-        <form action="" method="post">
-            {{ username_form.csrf_token }}
-            <div class="form-group">
-                {{ username_form.username.label(class="form-control-label") }}
-                {{ username_form.username(class="form-control form-control-lg") }}
 
-                {% if username_form.username.errors %}
-                <div class="alert alert-warning" role="alert">
-                    {% for error in username_form.username.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-                {% endif %}
-            </div>
-            <div class="form-group">
-                {{ username_form.submit }}
-            </div>
-        </form>
-    </div>
-</div>
 {% endblock %}>
