--- a/flask_app/templates/account.html
+++ b/flask_app/templates/account.html
@@ -7,7 +7,7 @@
     <hr>
 
     <div class="row">
-        <h5>Username:&nbsp;</h5> {{current_user.username}}
+        <h5>Username:&nbsp;</h5> @{{current_user.username}}
     </div>
     <div class="row">
         <div class="col">
@@ -46,7 +46,7 @@
     <div class="row">
         <ul>
         {% for group in current_user.following %}
-            <li><a href="{{ url_for('groups.group_detail', group_id=group.group_id) }}">{{group.group_id}}: </a>{{ group.description }}</li>
+            <li><a href="{{ url_for('groups.group_detail', group_id=group.group_id) }}">@{{group.group_id}}: </a>{{ group.description }}</li>
         {% endfor %}
         </ul>
     </div>
