--- a/flask_app/templates/group_detail.html
+++ b/flask_app/templates/group_detail.html
@@ -47,7 +47,7 @@
               <form name = "go_to_new_poll_form" action="" method="post">
                 {{ go_to_new_poll_form.csrf_token }}
                 <div class="form-group">
-                  {{ go_to_new_poll_form.new_poll(type="submit", class="btn btn-primary btn-lg btn-block") }}
+                  {{ go_to_new_poll_form.new_poll(type="submit", class="btn btn-outline-primary btn-block") }}
                 </div>
               </form>
             </div>
@@ -55,7 +55,7 @@
               <form name = "next_poll_form" action="" method="post">
                 {{ next_poll_form.csrf_token }}
                 <div class="form-group">
-                  {{ next_poll_form.next(type="submit", class="btn btn-primary btn-lg btn-block") }}
+                  {{ next_poll_form.next(type="submit", class="btn btn-outline-primary btn-block") }}
                 </div>
               </form>
             </div>
@@ -111,9 +111,12 @@
                 <h3>You voted:&nbsp{{ answer }}</h3>
               {% endif %}
             </div>
-            <div class="row">
-                <iframe style="width: inherit; height: 1000;" srcdoc="{{ plot }}" frameborder="0"></iframe>
-            </div>
+            <form name = "chart_form" action="" method="post">
+              {{ chart_form.csrf_token }}
+              <div class="form-group">
+                {{ chart_form.gen_chart(type="submit", class="btn btn-secondary btn-lg btn-block") }}
+              </div>
+            </form>  
             {% else %}
               <h3> There are no active polls currently </h3>
             {% endif %}
