--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -8,7 +8,7 @@
     {% if title %}
         <title>{{ title }}</title>
     {% else %}
-        <title>Flickers</title>
+        <title>QuickVote</title>
     {% endif %}
 </head>
 <body>
