--- a/flask_app/templates/home.html
+++ b/flask_app/templates/home.html
@@ -1,19 +1,13 @@
 {% extends "header.html" %}
 {% block content %}
 <div class="row">
-    <h1> Welcome to Flickers!<h1>
+    <h1> Welcome to QuickVote<h1>
 </div>
 <div class="row">
-    This is a project by Evan Devore designed for my CMSC388J class and built for my fraternity, Sigma Alpha Mu.<br/>   
+    This is a project by Evan Devore designed and built for use by my fraternity, Sigma Alpha Mu.<br/>   
 </div>
 <div class="row">
-    <b style="color:rgb(56, 161, 14)">F</b>raternity + C<b style="color:rgb(56, 161, 14)">lickers</b> = <b style="color:rgb(56, 161, 14)">Flickers</b><br/>   
-</div>
-<div class="row">
-    See how I built it on my&nbsp<a href="https://github.com/edevore/flickers">Github</a>,&nbspor check out my&nbsp<a href="{{ url_for('misc.resume') }}">Resume</a>
-</div>
-<div class="row">
-    Check the toolbar above to head to different pages.
+    See how I built it on my&nbsp<a href="https://github.com/edevore/flickers">Github</a>,&nbspor check out my&nbsp<a href="https://ter.ps/devoreresume">Resume</a>
 </div>
 <hr>
 <div class="row">
