--- a/flask_app/templates/group_detail.html
+++ b/flask_app/templates/group_detail.html
@@ -74,75 +74,52 @@
               <div class="row">
                 <h3>{{ current_poll.question }}<h3>
               </div>
-              <div class="row">
-                <h5>Poll Type: {{current_poll.poll_type}}</h5>
-              </div>
-              {% if (current_poll.poll_type == "Visible") or (current_poll.poll_type == "Leader Only" and current_user.username == group.leader.username) %}
-              <div class="row"></div>
-                <div id="table-wrapper">
-                  <div id="table-scroll">
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th scope="col">Vote</th>
-                          <th scope="col">Count</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        {% for (vote, users_list) in current_poll.get_responses().items() %}
-                          <tr>
-                            <th scope="row">{{vote}}</th>
-                            {% if users_list != [] %}
-                              {% for user in users_list %}
-                                <td>@{{user}}, </td>
-                              {% endfor %}
-                            {% else %}
-                            <td> No Votes </td>
-                            {% endif %}
-                          </tr>
-                        {%endfor%}
-                      </tbody>
-                    </table>
+              <form name = "poll_response_form" action="" method="post">
+                {{ poll_response_form.csrf_token }}
+                {% for subfield in poll_response_form.choices %}
+                  <div class="row">
+                    <td>{{ subfield }}&nbsp</td>
+                    <td>{{ subfield.label }}</td>
                   </div>
+                {% endfor %}
+                <div class="row">
+                  {{ poll_response_form.submit(type="submit", class="btn btn-primary btn-lg btn-block") }}
                 </div>
-              </div>
-              {% endif %}    
-              {% if poll_response_form %}
-              <hr> <h5> Your Vote: </h5>
-                <form name = "poll_response_form" action="" method="post">
-                  {{ poll_response_form.csrf_token }}
-                  {% for subfield in poll_response_form.choices %}
-                    <div class="row">
-                      <td>{{ subfield }}&nbsp</td>
-                      <td>{{ subfield.label }}</td>
-                    </div>
-                  {% endfor %}
-                  <div class="row">
-                    {{ poll_response_form.submit(type="submit", class="btn btn-primary btn-lg btn-block") }}
-                  </div>
-                  <div class="row">
-                    <h3>Current Responses</h3>
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th scope="col">Vote</th>
-                          <th scope="col">Count</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        {% for (key, value) in current_poll.get_counts().items() %}
-                          <tr>
-                            <th scope="row">{{key}}</th>
-                            <td>{{value}}</td>
-                          </tr>
-                        {%endfor%}
-                      </tbody>
-                    </table>
-                  </div>
-                </form>
-              {% else %}
-                <h3>You voted:&nbsp{{ answer }}</h3>
-              {% endif %}
+                <div class="row">
+                  <h3>Current Responses ({{current_poll.poll_type}})</h3>
+                  <table class="table">
+                  {% if (current_poll.poll_type == "Visible") or (current_poll.poll_type == "Leader Only" and current_user.username == group.leader.username) %}
+                    {% for (key, value) in current_poll.get_responses().items() %}
+                      <tr>
+                        <th scope = "row"> {{key}}</th>
+                        <td>{{value|length}}</td>
+                        {% if value|length %}
+                        <td> 
+                          {% for user in value %}
+                            {{user.first_name}} {{user.last_name}}
+                            {% if not loop.last %}
+                                ,
+                            {% endif %}
+                          {% endfor %}
+                        </td>
+                        {% else %}
+                          <td> No Votes </td>
+                        {% endif %}
+                      </tr>
+                    {% endfor %}
+
+                  {% else %}                   
+                    {% for (key, value) in current_poll.get_counts().items() %}
+                      <tr>
+                        <th scope="row">{{key}}</th>
+                        <td>{{value}}</td>
+                      </tr>
+                    {%endfor%}
+                  {% endif %}
+                </table>
+
+                </div>
+              </form>
             </div>
             <form name = "chart_form" action="" method="post">
               {{ chart_form.csrf_token }}
